--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css"
 </head>
 <body>
-    
+    <div>
+        <h3>
+            My First Website
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores deserunt rem quas repudiandae, earum ipsa illum obcaecati exercitationem provident. Consequatur, nemo nobis. In nemo nihil id dolores velit dolorum possimus.</p>
+    </div>
 </body>
 </html>
