--- a/index.html
+++ b/index.html
@@ -37,5 +37,14 @@
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores deserunt rem quas repudiandae, earum ipsa illum obcaecati exercitationem provident. Consequatur, nemo nobis. In nemo nihil id dolores velit dolorum possimus.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message</li>
+            <li>git push</li>
+        
+        </ul>
+    </div>
 </body>
 </html>
